--- a/public/css/Mega-Menu.css
+++ b/public/css/Mega-Menu.css
@@ -31,14 +31,14 @@
 }
 
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-  background: #1ebdc2;
+  background: red;
   transition: 0.3s;
 }
 
 .dropdown-item:focus, .dropdown-item:hover {
   color: #fff;
   text-decoration: none;
-  background-color: #1ebdc2 !important;
+  background-color: red !important;
 }
 
 .sm-menu {
