--- a/public/css/Nice-breadcrumb.css
+++ b/public/css/Nice-breadcrumb.css
@@ -6,13 +6,13 @@
 }
 
 .breadcrumb li.home a {
-  background: #545454;
+  background: #008001;
   color: white;
   padding-left: 15px;
 }
 
 .breadcrumb li.home a:after {
-  border-left: 30px solid #545454;
+  border-left: 30px solid #008001;
 }
 
 .breadcrumb li.home a span:before {
@@ -20,7 +20,7 @@
 }
 
 .breadcrumb li a {
-  color: black;
+  color: white;
   text-decoration: none;
   padding: 10px 0 10px 45px;
   position: relative;
@@ -52,7 +52,7 @@
 }
 
 .breadcrumb li a:hover:after {
-  border-left-color: #74381d !important;
+  border-left-color: red !important;
 }
 
 .breadcrumb li.active a {
