--- a/public/css/Paralax-Hero-Banner-1.css
+++ b/public/css/Paralax-Hero-Banner-1.css
@@ -1,7 +1,7 @@
 div.jumbotron.hero-technology {
-  color: #fff;
+  color: red;
   text-align: center;
-  background: url('/assets/img/hero-background-technology.jpg');
+  background: url('/img/team1.png');
   background-size: cover;
   background-position: center top;
   padding-top: 100px;
@@ -11,7 +11,8 @@ div.jumbotron.hero-technology {
 
 h1.hero-title, h2.hero-title, h3.hero-title {
   text-shadow: 0 2px 2px rgba(0,0,0,0.3);
-  color: #fff;
+  color: red;
+  text-shadow: 1px 1px black;
   font-weight: 500;
 }
 
@@ -20,8 +21,9 @@ p.hero-subtitle {
   margin: 25px auto;
   padding: 10px 15px;
   background-color: rgba(0,0,0,0.1);
-  color: #fff;
+  color: red;
   text-shadow: 0 1px 1px rgba(0,0,0,0.7);
-  font-weight: 500;
+  font-weight: bold;
+  text-shadow: 1px 1px black;
 }
 
